--- a/t2.ipynb
+++ b/t2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "3d88d2c4",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "12ba3d77",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "[223 rows x 32 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "b9245f01",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "[223 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "1fb64eee",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
        "[120 rows x 31 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "ec2868aa",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
        "[103 rows x 31 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "7c276ba1",
    "metadata": {},
    "outputs": [
@@ -1323,15 +1323,15 @@
      "data": {
       "text/plain": [
        "<class 'statsmodels.stats.base.HolderTuple'>\n",
-       "statistic = np.float64(1.4892684332610164)\n",
-       "pvalue = np.float64(0.20643536815038813)\n",
+       "statistic = 1.4892684332610189\n",
+       "pvalue = 0.20643536815038777\n",
        "df = (4, 218)\n",
-       "t2 = np.float64(6.039051811939168)\n",
+       "t2 = 6.039051811939178\n",
        "distr = 'F'\n",
-       "tuple = (np.float64(1.4892684332610164), np.float64(0.20643536815038813))"
+       "tuple = (1.4892684332610189, 0.20643536815038777)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "c3b36f69",
    "metadata": {},
    "outputs": [
@@ -1353,15 +1353,15 @@
      "data": {
       "text/plain": [
        "<class 'statsmodels.stats.base.HolderTuple'>\n",
-       "statistic = np.float64(33.023299629871325)\n",
-       "pvalue = np.float64(1.5859674105444531e-21)\n",
+       "statistic = 33.02329962987134\n",
+       "pvalue = 1.5859674105444533e-21\n",
        "df = (4, 218)\n",
-       "t2 = np.float64(133.91099482938648)\n",
+       "t2 = 133.91099482938654\n",
        "distr = 'F'\n",
-       "tuple = (np.float64(33.023299629871325), np.float64(1.5859674105444531e-21))"
+       "tuple = (33.02329962987134, 1.5859674105444533e-21)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "74607370",
    "metadata": {},
    "outputs": [
@@ -1383,15 +1383,15 @@
      "data": {
       "text/plain": [
        "<class 'statsmodels.stats.base.HolderTuple'>\n",
-       "statistic = np.float64(4.9333613486953345)\n",
-       "pvalue = np.float64(0.000794299516709327)\n",
+       "statistic = 4.933361348695333\n",
+       "pvalue = 0.0007942995167093277\n",
        "df = (4, 218)\n",
-       "t2 = np.float64(20.005006569938878)\n",
+       "t2 = 20.00500656993887\n",
        "distr = 'F'\n",
-       "tuple = (np.float64(4.9333613486953345), np.float64(0.000794299516709327))"
+       "tuple = (4.933361348695333, 0.0007942995167093277)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "38e81a9d",
    "metadata": {},
    "outputs": [
@@ -1413,15 +1413,15 @@
      "data": {
       "text/plain": [
        "<class 'statsmodels.stats.base.HolderTuple'>\n",
-       "statistic = np.float64(9.538709035172372)\n",
-       "pvalue = np.float64(3.9940186934097814e-07)\n",
+       "statistic = 9.538709035172381\n",
+       "pvalue = 3.994018693409679e-07\n",
        "df = (4, 218)\n",
-       "t2 = np.float64(38.6799026930843)\n",
+       "t2 = 38.67990269308434\n",
        "distr = 'F'\n",
-       "tuple = (np.float64(9.538709035172372), np.float64(3.9940186934097814e-07))"
+       "tuple = (9.538709035172381, 3.994018693409679e-07)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "41f4f796",
    "metadata": {},
    "outputs": [
@@ -1646,19 +1646,19 @@
        "[768 rows x 10 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_excel(\"/Users/louisenorthfleet/Desktop/data_2/data.xlsx\")\n",
+    "df = pd.read_excel(\"ENB2012_data.xlsx\")\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "fb6c7f29",
    "metadata": {},
    "outputs": [
@@ -1671,8 +1671,8 @@
       "Dep. Variable:                     Y2   R-squared:                       0.888\n",
       "Model:                            OLS   Adj. R-squared:                  0.887\n",
       "Method:                 Least Squares   F-statistic:                     859.1\n",
-      "Date:                Mon, 17 Nov 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        18:38:23   Log-Likelihood:                -1979.3\n",
+      "Date:                Wed, 19 Nov 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        10:31:19   Log-Likelihood:                -1979.3\n",
       "No. Observations:                 768   AIC:                             3975.\n",
       "Df Residuals:                     760   BIC:                             4012.\n",
       "Df Model:                           7                                         \n",
@@ -1693,17 +1693,18 @@
       "Omnibus:                      104.668   Durbin-Watson:                   1.094\n",
       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              230.547\n",
       "Skew:                           0.767   Prob(JB):                     8.65e-51\n",
-      "Kurtosis:                       5.203   Cond. No.                     1.36e+16\n",
+      "Kurtosis:                       5.203   Cond. No.                     2.30e+16\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The smallest eigenvalue is 2.45e-24. This might indicate that there are\n",
+      "[2] The smallest eigenvalue is 8.58e-25. This might indicate that there are\n",
       "strong multicollinearity problems or that the design matrix is singular.\n"
      ]
     }
    ],
    "source": [
+    "# a)\n",
     "import statsmodels.api as sm\n",
     "\n",
     "variaveis = [col for col in df.columns if col not in ['Y1', 'Y2']]\n",
@@ -1721,6 +1722,14 @@
     "\n",
     "print(fit0.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d345d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1742,11 +1751,183 @@
     "\n",
     "📌 Outro indicativo de que X6 e X8 não têm efeito confiável."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "83d24704",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Iniciando Stepwise ---\n",
+      "Removendo 'X8' (p-valor: 0.5938)\n",
+      "Removendo 'X6' (p-valor: 0.2397)\n",
+      "\n",
+      "Variáveis que sobreviveram: ['const', 'X1', 'X2', 'X3', 'X4', 'X5', 'X7']\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                     Y2   R-squared:                       0.888\n",
+      "Model:                            OLS   Adj. R-squared:                  0.887\n",
+      "Method:                 Least Squares   F-statistic:                     1203.\n",
+      "Date:                Wed, 19 Nov 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        10:41:46   Log-Likelihood:                -1980.2\n",
+      "No. Observations:                 768   AIC:                             3972.\n",
+      "Df Residuals:                     762   BIC:                             4000.\n",
+      "Df Model:                           5                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         97.7618     20.756      4.710      0.000      57.015     138.508\n",
+      "X1           -70.7877     11.223     -6.307      0.000     -92.819     -48.756\n",
+      "X2            -0.0661      0.015     -4.520      0.000      -0.095      -0.037\n",
+      "X3             0.0225      0.004      5.366      0.000       0.014       0.031\n",
+      "X4            -0.0443      0.008     -5.405      0.000      -0.060      -0.028\n",
+      "X5             4.2838      0.369     11.620      0.000       3.560       5.008\n",
+      "X7            14.8180      0.867     17.082      0.000      13.115      16.521\n",
+      "==============================================================================\n",
+      "Omnibus:                      104.896   Durbin-Watson:                   1.095\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              232.225\n",
+      "Skew:                           0.766   Prob(JB):                     3.74e-51\n",
+      "Kurtosis:                       5.215   Cond. No.                     2.29e+16\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 8.63e-25. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# b)\n",
+    "def stepwise_selection(X, y, threshold_out=0.05):\n",
+    "    initial_features = X.columns.tolist()\n",
+    "    best_features = initial_features.copy()\n",
+    "    \n",
+    "    while len(best_features) > 0:\n",
+    "        # Adiciona constante para o statsmodels funcionar direito\n",
+    "        X_const = sm.add_constant(X[best_features])\n",
+    "        model = sm.OLS(y, X_const).fit()\n",
+    "        \n",
+    "        # Pega o maior p-valor (ignorando a constante)\n",
+    "        p_values = model.pvalues.drop('const')\n",
+    "        max_p_value = p_values.max()\n",
+    "        feature_to_remove = p_values.idxmax()\n",
+    "        \n",
+    "        # Se o pior p-valor for maior que 0.05, remove a variável\n",
+    "        if max_p_value > threshold_out:\n",
+    "            print(f\"Removendo '{feature_to_remove}' (p-valor: {max_p_value:.4f})\")\n",
+    "            best_features.remove(feature_to_remove)\n",
+    "        else:\n",
+    "            break # Sai do loop se todas forem boas\n",
+    "            \n",
+    "    return best_features\n",
+    "\n",
+    "# --- RODANDO O STEPWISE ---\n",
+    "print(\"--- Iniciando Stepwise ---\")\n",
+    "variaveis_finais = stepwise_selection(X, y)\n",
+    "\n",
+    "print(f\"\\nVariáveis que sobreviveram: {variaveis_finais}\")\n",
+    "\n",
+    "# Ajustando o modelo final com apenas as variáveis vencedoras\n",
+    "X_final = sm.add_constant(X[variaveis_finais])\n",
+    "modelo_final = sm.OLS(y, X_final).fit()\n",
+    "\n",
+    "print(modelo_final.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8f00b39",
+   "metadata": {},
+   "source": [
+    "Mesmo revomevendo as duas colunas o R-squared permanece igual, e o AIC tem uma diferença de apenas 3 (3975-3972)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d380979c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removendo 'X8' (p-valor: 0.6938)\n",
+      "Removendo 'X6' (p-valor: 0.6372)\n",
+      "Variáveis selecionadas no treino: ['const', 'X1', 'X2', 'X3', 'X4', 'X5', 'X7']\n",
+      "\n",
+      "--- COMPARAÇÃO NO TESTE ---\n",
+      "Modelo Completo | MSE: 9.8934 | MAE: 2.1953\n",
+      "Modelo Stepwise | MSE: 9.9542 | MAE: 2.2012\n"
+     ]
+    }
+   ],
+   "source": [
+    "# c)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "# 2. Divisão Treino-Teste (80-20) com semente fixa\n",
+    "# random_state=42 é a semente padrão para garantir que sempre dê o mesmo resultado\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)\n",
+    "\n",
+    "\n",
+    "# --- MODELO 1: COMPLETO (Full) ---\n",
+    "X_train_full = sm.add_constant(X_train)\n",
+    "X_test_full = sm.add_constant(X_test)\n",
+    "\n",
+    "model_full = sm.OLS(y_train, X_train_full).fit()\n",
+    "y_pred_full = model_full.predict(X_test_full)\n",
+    "\n",
+    "# --- MODELO 2: STEPWISE ---\n",
+    "# A seleção é feita olhando SÓ para o treino\n",
+    "vars_stepwise = stepwise_selection(X_train, y_train)\n",
+    "print(f\"Variáveis selecionadas no treino: {vars_stepwise}\")\n",
+    "\n",
+    "X_train_step = sm.add_constant(X_train[vars_stepwise])\n",
+    "X_test_step = sm.add_constant(X_test[vars_stepwise]) # Aplica as mesmas vars no teste\n",
+    "\n",
+    "model_step = sm.OLS(y_train, X_train_step).fit()\n",
+    "y_pred_step = model_step.predict(X_test_step)\n",
+    "\n",
+    "# --- AVALIAÇÃO (Métricas no Teste) ---\n",
+    "mse_full = mean_squared_error(y_test, y_pred_full)\n",
+    "mae_full = mean_absolute_error(y_test, y_pred_full)\n",
+    "\n",
+    "mse_step = mean_squared_error(y_test, y_pred_step)\n",
+    "mae_step = mean_absolute_error(y_test, y_pred_step)\n",
+    "\n",
+    "print(\"\\n--- COMPARAÇÃO NO TESTE ---\")\n",
+    "print(f\"Modelo Completo | MSE: {mse_full:.4f} | MAE: {mae_full:.4f}\")\n",
+    "print(f\"Modelo Stepwise | MSE: {mse_step:.4f} | MAE: {mae_step:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de5bef17",
+   "metadata": {},
+   "source": [
+    "Ambos os modelos possuem (em termos de MSE e MAE) valores muito proximos, o que indica que de fato as variaveis X6 e X8 não eram muito relevantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec980da7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ambiente-cpa",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1760,7 +1941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
